[gd_scene load_steps=3 format=3 uid="uid://cage38gypfk7u"]

[ext_resource type="Texture2D" uid="uid://cua1r31g2htps" path="res://Assets/Cards/UI/coin.png" id="1_swi2f"]
[ext_resource type="Script" path="res://Assets/Coin.gd" id="1_vm8me"]

[node name="Coin" type="Node2D"]
script = ExtResource("1_vm8me")

[node name="Button" type="Button" parent="."]
offset_right = 48.0
offset_bottom = 48.0
action_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_swi2f")
centered = false
offset = Vector2(8, 8)

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
